--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 <body>
   <div id="app"></div>
   <script src="/dist/bundle.js"></script>
+  <script src="app.js" async></script>
+
 </body>
 
 </html>
